5 methods for .child is working

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 		<title>Custom Jquery</title>
 </head>
 <body>
+<p>Hello</p>
 <ul id="myList">
-		<li class="x">Example one</li>
-		<li>Example two</li>
-		<li>Example three</li>
+		<li class="wrapper">Example one</li>
+		<li class="item">Example two</li>
+		<li class="item">Example three</li>
 		<li>Example four</li>
 		<li>Example five</li>
 		<li>Example Six</li>
 </ul>
 <script>
-
-	$('li').addClass('x  y');
+	$('ul').children('.item');
 </script>
 </body>
 
