jquery constructor added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <p>Hello</p>
 <div class="wrapper">
-		<div class="child">Example one</div>
+		<div class="child foo">Example one</div>
 		<div class="child" >Example two</div>
 		<div class="child">Example three</div>
 		<div>Example four</div>
@@ -16,7 +16,7 @@
 		<div>Example Six</div>
 </div>
 <script>
-	$('.child').append($('p'));
+	$('.child').addClass('foo boo');
 
 </script>
 </body>
