css method updated(31 from 40 tests passed)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div>Example Six</div>
 </div>
 <script>
-	console.log($('.wrapper').data('foo'));
+	console.log($('.child').data('foo', 1));
 
 </script>
 </body>
