--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 <script>
 
 
-	$('.wrapper').on('click', '.child', function () {
-		console.log(45);
-	})
+	$('.wrapper').addClass('foo bar')
 
 
 </script>
